[package]
name = "minimum-browser"
version = "0.1.0"
authors = ["Ubugeeei"]
edition = "2018"

[dependencies]
thiserror = "1.0"
combine = "4.5.2"
# rusty_v8 = "0.22.1"
sdl2 = { version = "0.35.0", features = ["ttf", "image", "gfx"] }

glasper = { git = "https://github.com/Ubugeeei/Glasper.git" }
gtk = { version = "0.4.8", package = "gtk4" }