[package]
name = "kurt"
version = "0.1.0"
authors = ["Ubugeeei"]
edition = "2018"

[dependencies]
glasper = { git = "https://github.com/Ubugeeei/Glasper.git" }
gtk = { version = "0.4.8", package = "gtk4" }
reqwest = { version = "0.11", features = ["blocking", "json"] }
tokio = { version = "1", features = ["full"] }
thiserror = "1.0"
combine = "4.5.2"
regex = "1"